--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -307,7 +307,7 @@ To determine their exact feature content, I first focus on \tit{mu}. Then, I ext
 
 \begin{table}[htbp]
   \center
-  \caption{Syncretism in dative neuter pronouns in Polish \citep{swan2002}}
+  \caption{Syncretism in dative neuter pronouns in Polish \pgcitep{swan2002}{156,171}}
   \begin{tabular}[b]{ccc}
     \toprule
                       & \tsc{m}.\tsc{dat}   & \tsc{n}.\tsc{dat}  \\
@@ -526,7 +526,7 @@ The \tit{k} in \ref{ex:pol-gdzie} gets voiced into \tit{g} because it is followe
  when\\
 \bg. g-dzie\\
  where\\\label{ex:pol-gdzie}
- \flushfill{Polish, \pgcitealt{swan2002}{180,183-184}}
+ \flushfill{Polish, \pgcitealt{swan2002}{180,183,184}}
 
 Moreover, \tit{cz} is not a primary consonant in Polish but a derived one \pgcitep{swan2002}{23}. The consonants \tit{cz} and \tit{c} are derived from \tit{k}.
 
@@ -553,7 +553,7 @@ I show the proposed decomposition in Table \ref{tbl:pol-rp-underl}.
 \end{table}
 
 Under this analysis, Polish only has the morphemes \tit{k}, \tit{o} and \tit{i} that can be observed in the animate plus an \tit{i} that is present throughout the whole paradigm in the inanimate.\footnote{
-As first sight, there seems to be a contradiction here: the inanimate is featurally speaking less complex than the animate  \citep[cf.][]{harley2002}, but morphologically the inanimate is more complex than the animate: it contains the additional morpheme \tit{i}. I return to this point in footnote \ref{ftn:inam-pointer} of this chapter to show how this apparent contradiction can be resolved. hoi
+As first sight, there seems to be a contradiction here: the inanimate is featurally speaking less complex than the animate  \citep[cf.][]{harley2002}, but morphologically the inanimate is more complex than the animate: it contains the additional morpheme \tit{i}. I return to this point in footnote \ref{ftn:inam-pointer} of this chapter to show how this apparent contradiction can be resolved.
 }
 I put the underlying forms and the surface form side by side in Table \ref{tbl:pol-rps-underl-real}.
 
@@ -586,7 +586,7 @@ Consider the paradigm for the singular of \tit{lampa} `light' and the singular o
 
 \begin{table}[htbp]
   \center
-  \caption{Polish nouns \pgcitep{swan2002}{47,57}}
+  \caption{Polish feminine nouns with hard p/k stem \pgcitep{swan2002}{47,49}}
   \begin{tabular}[b]{ccc}
     \toprule
           & light.\tsc{sg} & daughter.\tsc{sg} \\
@@ -676,7 +676,7 @@ Consider the paradigm for the singular of \tit{biurko} `desk' and the singular o
 
 \begin{table}[htbp]
   \center
-  \caption{Polish nouns \pgcitep{swan2002}{116,117}}
+  \caption{Polish neuter nouns with hard k/c stem \pgcitep{swan2002}{116,117}}
   \begin{tabular}[b]{ccc}
     \toprule
           & desk.\tsc{sg} & sun.\tsc{sg} \\
@@ -867,7 +867,7 @@ Therefore, the \tsc{an}P is spelled out as \tit{o}, shown in \ref{ex:pol-spellou
 \end{forest}
 
 The next feature in the functional sequence is the feature \tsc{ind}. It is merged, and an \tsc{ind}P is created. This syntactic structure does not form a constituent in the lexical tree in \ref{ex:pol-entry-o-rep-rp}. There is no other lexical tree that contains the syntactic structure as a constituent.
-Therefore, there is no succesfull spellout for the syntactic structure in the derivational step in which the structure is spelled out as a single phrase (\ref{ex:spellout-algorithm-phrasal-rep} in the Spellout Algorithm, repeated from Chapter \ref{ch:deriving-onlyinternal}).
+Therefore, there is no successfull spellout for the syntactic structure in the derivational step in which the structure is spelled out as a single phrase (\ref{ex:spellout-algorithm-phrasal-rep} in the Spellout Algorithm, repeated from Chapter \ref{ch:deriving-onlyinternal}).
 
 \ex. \tbf{Spellout Algorithm} (as in \citealt{caha2020a}, based on \citealt{starke2018})\label{ex:spellout-algorithm-rep}
  \a. Merge F and spell out.\label{ex:spellout-algorithm-phrasal-rep}
