--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -497,7 +497,7 @@ These different suffixes can be observed in several contexts besides relative pr
 
 For some forms, the table gives two different forms, the first one being nominal inflection and the second one being pronominal inflection \citep{braune2018}.
 The pronominal endings are the same as can be observed in the Table \ref{tbl:rel-dem-ohg}.
-Note here that the situation in Old High German is slightly from the one in Modern German, in which only the final consonant expresses gender, number and case features.
+Note here that the situation in Old High German is slightly different from the one in Modern German, in which only the final consonant expresses gender, number and case features.
 
 Besides gender, number and case features, I assume that the suffix also contains pronominal features. I do not only do so because the suffix is called pronominal inflection (\tit{Pronominalflexion}) in the literature \pgcitep{braune2018}{338}, but also because it appears in other pronominal forms too, such as possessives \pgcitep{braune2018}{337-338}, demonstratives with the \tit{dës}-stem \pgcitep{braune2018}{342} and interrogatives \pgcitep{braune2018}{345}.
 
@@ -887,7 +887,7 @@ I end up claiming that the extra light head corresponds to the phi and case feat
 
 The internal syntax of the Old High German extra light head is identical to the internal syntax of the Modern German extra light head. They both form a single phi and case feature portmanteau.
 
-In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-ohg}. As I noted before, these forms do not surface as light heads in a light-headed relative. They do also not surface anywhere else in the language. The are the nominative masculine singular and the accusative masculine singular, shown in \ref{ex:ohg-elhs}.\footnote{
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-ohg}. As I noted before, these forms do not surface as light heads in a light-headed relative. They do also not surface anywhere else in the language. They are the nominative masculine singular and the accusative masculine singular, shown in \ref{ex:ohg-elhs}.\footnote{
 Again, for reasons of space, I do not discuss the dative form. I assume its analysis is identical to the one I propose for the accusative and the dative.
 }
 
@@ -1047,7 +1047,7 @@ In sum, Old High German headless relatives can be derived from a light-headed re
 \subsection{The demonstrative}\label{sec:ohg-lh}
 
 As I mentioned in the introduction of this section, headless relatives in Old High German can be derived from two different light-headed relatives: one that does not surface in the language and one that does surface in the language.
-In this section I discuss the second one, the light-headed relative that also surfaces in the language. This light-headed relative is headed by a demonstrative. It cannot be the source of a headless relative in Modern German or Polish, but it can Old High German. In Old High German, the demonstrative is namely syncretic with the relative pronoun.
+In this section I discuss the second one, the light-headed relative that also surfaces in the language. This light-headed relative is headed by a demonstrative. It cannot be the source of a headless relative in Modern German or Polish, but it can in Old High German. In Old High German, the demonstrative is namely syncretic with the relative pronoun.
 
 In the introduction of this chapter, I suggested that the internal syntax of the demonstrative is as shown in \ref{ex:ohg-lh-complex-2}.
 
@@ -1793,7 +1793,7 @@ In Figure \ref{fig:ohg-ext-wins-elh}, I give the syntactic structure of the extr
                 [\tsc{rel}P
                     [\phantom{x}\tit{dh}\phantom{x}, roof]
                 ]
-                [\tsc{acc}P,
+                [\tsc{nom}P,
                 tikz={
                 \node[label=below:{\tit{er}},
                 draw,circle,
@@ -1828,7 +1828,7 @@ In this case, the light head is not structurally contained in the relative prono
 The extra light head consists of a single morpheme: the \tsc{acc}P.
 The relative pronoun only contains the \tsc{nom}P, and it lacks the \tsc{f}2 that makes a \tsc{acc}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 The relative pronoun is not structurally contained in the light head. It namely lacks the complete constituent \tsc{rel}P.
-The extra light cannot be deleted, and the relative pronoun cannot be deleted either.
+The extra light head cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, the light-headed relative headed by the extra light head cannot be the source of the headless relative.
 
 In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -1929,7 +1929,7 @@ I draw a dotted circle around the biggest possible element that is formally cont
 
 The light head is realized as \tit{dhen}, and the relative pronoun is realized as \tit{dher}.
 The light head is not formally contained in the relative pronoun, and the relative pronoun is not formally contained in the light head.
-Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
+Therefore, The extra light head cannot be deleted, and the relative pronoun cannot be deleted either.
 The inevitable result seems to be that the light-headed relative headed by the demonstrative cannot be the source of the headless relative.
 This is not what the data suggests, however, as a more complex external case is allowed to surface in Old High German.
 
@@ -2028,7 +2028,7 @@ The remainder of the main clause is also not part of the syntactic structure. Th
 
 The structure in \ref{ex:ohg-syntax-ext-wins} has come into being by merging features one by one. The last feature that has been merged is \tsc{f}2, which created the \tsc{acc}P within the \tsc{dem}P. Remember from the functional sequence in \ref{ex:fseq-lh-ohg} that case features are the highest features, so they are the last ones to be merged.
 Before the feature \tsc{f}2 was merged, the syntactic structure looked as in \ref{ex:ohg-syntax-ext=int}.\footnote{\label{ftn:features-lh}
-The feature \tsc{f}2 ends up in it position via several steps of Backtracking in which different workspaces are split up and features are merged in both workspaces, as explained in Chapter \ref{ch:deriving-onlyinternal}. First, the \tsc{dem}P and the FP are split up and \tsc{f}2 is merged in both workspaces. None of them leads to a successful spellout, so both workspaces are split up further, giving three workspaces: the \tsc{dem}P, the \tsc{nom}P and the lowest CP. Now \tsc{f}2 can be spelled out with the \tsc{nom}P. All worskpaces are merged back together and the result is the structure in \ref{fig:ohg-ext-wins-lh}.
+The feature \tsc{f}2 ends up in its position via several steps of Backtracking in which different workspaces are split up and features are merged in both workspaces, as explained in Chapter \ref{ch:deriving-onlyinternal}. First, the \tsc{dem}P and the FP are split up and \tsc{f}2 is merged in both workspaces. None of them leads to a successful spellout, so both workspaces are split up further, giving three workspaces: the \tsc{dem}P, the \tsc{nom}P and the lowest CP. Now \tsc{f}2 can be spelled out with the \tsc{nom}P. All workspaces are merged back together and the result is the structure in \ref{fig:ohg-ext-wins-lh}.
 }
 
 \ex.\label{ex:ohg-syntax-ext=int}
@@ -2126,7 +2126,6 @@ Then the feature \tsc{f}2 is merged, and the light head is spelled out as \tit{d
     \node[draw,
     constituent-deletion,yshift=-0.4cm,rounded corners=3cm,
     dotted,very thick,
-    fill=DG,fill opacity=0.2,
     scale=1.25,
     fit to=tree]{};
     }
@@ -2164,6 +2163,7 @@ Then the feature \tsc{f}2 is merged, and the light head is spelled out as \tit{d
             tikz={
             \node[draw,circle,
             dotted,very thick,
+            fill=DG,fill opacity=0.2,
             scale=0.95,
             fit to=tree]{};
             }
@@ -2220,7 +2220,7 @@ In \ref{ex:ohg-nom-acc-lh}, the light head \tit{dher} `\tsc{dem}.\ac{sg}.\ac{m}.
 \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rp}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
 `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-lh}
 
-Only \ref{ex:ohg-nom-acc-lh} can be the source of the headless relative. First I show the comparison of the internal syntax of the extra light head and relative pronoun in \ref{ex:ohg-nom-acc-elh}, which leads to a grammatical headless relative. Then I show the comparison of the internal syntax of the light head and the relative pronoun in \ref{ex:ohg-nom-acc-lh}, which does not derive a grammatical headless relative.
+Only \ref{ex:ohg-nom-acc-elh} can be the source of the headless relative. First I show the comparison of the internal syntax of the extra light head and relative pronoun in \ref{ex:ohg-nom-acc-elh}, which leads to a grammatical headless relative. Then I show the comparison of the internal syntax of the light head and the relative pronoun in \ref{ex:ohg-nom-acc-lh}, which does not derive a grammatical headless relative.
 
 In Figure \ref{fig:ohg-int-wins-elh}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
 
@@ -2298,7 +2298,7 @@ Again, I circle the part of the structure that corresponds to a particular lexic
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{nom}P.
-This \tsc{nom}P is structurally contained in the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+This \tsc{nom}P is structurally contained in the relative pronoun. Therefore, The extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{then}.
 
 In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -2399,7 +2399,7 @@ I draw a dotted circle around the biggest possible element that formally contain
 
 The light head is realized as \tit{ther}, and the relative pronoun is realized as \tit{then}.
 The light head is not formally contained in the relative pronoun, and the relative pronoun is not formally contained in the light head.
-Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
+Therefore, The extra light head cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, the light-headed relative headed by the extra light head cannot be the source of the headless relative.
 
 In this situation, when the internal case is more complex than the external one, it does not make a difference to look at previous steps in the derivation. The last case feature was merged on the relative pronoun before the first case feature was merged on the light head. Going back in the derivation removes case features from the light head (so external case features) and not those from the relative pronoun. As long as the internal case is more complex, there is no step in the derivation in which the cases match.
@@ -2413,7 +2413,7 @@ In this chapter I have suggested that headless relatives in Old High German can 
 In Section \ref{sec:light-ohg} I did not provide any motivation for why there should be two different sources for headless relative in the language.
 In this section I consider whether there is any support that suggests so.
 In Section \ref{sec:interpretation-ohg}, I consider headless relatives in which an extra light head is deleted have a different interpretation from headless relatives in which the relative pronoun is deleted. I do not find such support.
-In Section \ref{sec:ohg-larger-syntax}, I place the light heads and the relative pronoun into a larger syntactic structure. I put the different light heads in the syntactic structure in such a way that deletion always takes place under c-comman. In that way, there seems to be a resemblance with what other researchers have suggested.
+In Section \ref{sec:ohg-larger-syntax}, I place the light heads and the relative pronoun into a larger syntactic structure. I put the different light heads in the syntactic structure in such a way that deletion always takes place under c-command. In that way, there seems to be a resemblance with what other researchers have suggested.
 
 \subsection{The interpretation of Old High German headless relatives}\label{sec:interpretation-ohg}
 
@@ -2557,7 +2557,6 @@ Consider the syntactic structure with the light head and the relative pronoun bo
     \node[draw,
     constituent-deletion,yshift=-0.4cm,rounded corners=2.6cm,
     dotted,very thick,
-    fill=DG,fill opacity=0.2,
     scale=1.25,
     fit to=tree]{};
     }
@@ -2591,6 +2590,7 @@ Consider the syntactic structure with the light head and the relative pronoun bo
             [\tsc{rel}P, s sep=15mm,
             tikz={
             \node[draw,circle,
+            fill=DG,fill opacity=0.2,
             dotted,very thick,
             scale=1,
             fit to=tree]{};
@@ -2783,7 +2783,7 @@ In order for the internal element to be able to delete the external element, a m
  \end{forest}
 
 Crucially, \citet{cinqueforthcoming} notes that the internal and external heads are indefinite. Only after the external head has been moved over the relative clause, it has access to a definite feature. Notice that this is exactly what I described for the extra light head and the light head. The extra light head is indefinite and is situated in a structurally low position, as in \ref{ex:cinque-low-ext}. The light head is definite and is situated in a structurally high position, as in \ref{ex:cinque-high-ext}.\footnote{
-At this point, two questions remain. The first one is how case features end up on the extra light head, if it is low in the structure, since they are only merged after the relative clause attaches. On the surface, it looks like the case features percolate down to the extra light head. The mechanism behind this the same as what I described for how case features end up on the light head in footnote \ref{ftn:features-lh}: Backtracking. First, the CP and the extra light head are split up and the case feature is merged in both workspaces. If it is a language such as Modern German that has a phi and case feature portmanteau, the case feature can be spelled out with the rest of the structure. Then, the two workspaces are merged back together.
+At this point, two questions remain. The first one is how case features end up on the extra light head, if it is low in the structure, since they are only merged after the relative clause attaches. On the surface, it looks like the case features percolate down to the extra light head. The mechanism behind this is the same as what I described for how case features end up on the light head in footnote \ref{ftn:features-lh}: Backtracking. First, the CP and the extra light head are split up and the case feature is merged in both workspaces. If it is a language such as Modern German that has a phi and case feature portmanteau, the case feature can be spelled out with the rest of the structure. Then, the two workspaces are merged back together.
 
 The second question that remains is what triggers the movement of the external head over the relative clause. Generally speaking, there are two options: the movement can be driven by features or by spellout. I would not know by what feature the movement could be driven. It could be that the movement is driven by spellout. It seems that the movement of the extra light head coincides with the element becoming definite. In terms of spellout, becoming definite means that a complex spec is merged to existing syntactic structure. It seems that once the complex spec is merged, it attracts the existing syntactic structure that it copied a feature from to form its complex spec (\tsc{ind} in the case of Old High German).
 }
