--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -14,7 +14,7 @@
   author = {Van Riemsdijk, Henk},
   editor = {Everaert, Martin and {van Riemsdijk}, Henk},
   year = {2006},
-  pages = {338-382},
+  pages = {338--382},
   doi = {10.1002/9780470996591.ch27}
 }
 
@@ -47,7 +47,7 @@
 @book{behaghel1923,
   title={Deutsche Syntax: Eine geschichtliche Darstellung},
   author={Behaghel, Otto},
-  year={1923-1932},
+  year={1923--1932},
   publisher={Winter},
   location={Heidelberg}
 }
@@ -60,14 +60,14 @@
   author = {Vogel, Ralf},
   editor = {Müller, Gereon and Sternefeld, Wolfgang},
   year = {2001},
-  pages = {341-375},
+  pages = {341--375},
   doi = {10.1515/9783110829068.341}
 }
 
 @phdthesis{harbert1978,
   title={Gothic syntax: a relational grammar},
   author={Harbert, Wayne Eugene},
-  location = {University of Illinois},
+  school = {University of Illinois},
   location = {Urbana-Champaign},
   year={1978}
 }
@@ -78,7 +78,7 @@
   journal = {Tocharian and Indo-European Studies},
   author = {Gippert, Jost},
   year = {1987},
-  pages = {22-39}
+  pages = {22--39}
 }
 
 @article{pittner1995,
@@ -89,7 +89,7 @@
   journal = {The linguistic review},
   author = {Pittner, Karin},
   year = {1995},
-  pages = {197-231}
+  pages = {197--231}
 }
 
 @incollection{starke2018,
@@ -100,7 +100,7 @@
   author = {Starke, Michal},
   editor = {Baunaz, Lena and De Clercq, Karen and Haegeman, Liliane and Lander, Eric},
   year = {2018},
-  pages = {239-249},
+  pages = {239--249},
   doi = {10.1093/oso/9780190876746.003.0009}
 }
 
@@ -117,7 +117,7 @@
   author = {Kiparsky, Paul},
   editor = {Anderson, Stephen and Kiparsky, Paul},
   year = {1973},
-  pages = {93-106}
+  pages = {93--106}
 }
 
 @article{starke2009,
@@ -126,7 +126,7 @@
   journal = {Nordlyd},
   author = {Starke, Michal},
   year = {2009},
-  pages = {1-6}
+  pages = {1--6}
 }
 
 @article{keenan1977,
@@ -166,7 +166,7 @@
   journal = {Linguistic Inquiry},
   author = {Bresnan, Joan and Grimshaw, Jane},
   year = {1978},
-  pages = {331-391}
+  pages = {331--391}
 }
 
 @inproceedings{groos1981,
@@ -186,7 +186,7 @@
   journal = {Linguistic Inquiry},
   author = {Citko, Barbara},
   year = {2005},
-  pages = {475-496},
+  pages = {475--496},
   doi = {10.1162/002438905774464331}
 }
 
@@ -194,7 +194,7 @@
   title= {A cross-linguistic approach to the pro-drop parameter},
   author= {Gilligan, Gary Martin},
   year= {1987},
-  location= {University of Southern California},
+  school= {University of Southern California},
   location= {Los Angeles, CA}
 }
 
@@ -206,7 +206,7 @@
   location = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
-  pages = {331-374},
+  pages = {331--374},
   doi={10.2307/413494}
 }
 
@@ -218,7 +218,7 @@
   location = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
-  pages = {585-623},
+  pages = {585--623},
   doi={10.2307/413494}
 }
 
@@ -230,7 +230,7 @@
   author = {Bobaljik, Jonathan},
   editor = {Harbour, Daniel and Adger, David and Béjar, Susana},
   year = {2006},
-  pages = {295-328}
+  pages = {295--328}
 }
 
 @article{zaenen1985,
@@ -260,7 +260,7 @@
 @phdthesis{caha2009,
   location = {Tromsø},
   title = {The Nanosyntax of Case},
-  location = {University of Tromsø},
+  school = {University of Tromsø},
   author = {Caha, Pavel},
   year = {2009}
 }
@@ -297,7 +297,6 @@
   volume={3},
   number={1},
   year={2018},
-  publisher={Ubiquity Press},
   doi={10.5334/gjgl.373}
 }
 
@@ -333,7 +332,7 @@
   journal = {Natural Language and Linguistic Theory},
   author = {Grosu, Alexander},
   year = {2003},
-  pages = {247-331}
+  pages = {247--331}
 }
 
 @incollection{moravcsik2009,
@@ -341,7 +340,7 @@
   author={Moravcsik, Edith A.},
   booktitle={The Oxford handbook of case},
   editor={Andrej Malchukov and Andrew Spencer},
-  pages={231–245},
+  pages={231–-245},
   year={2009},
   adress={Oxford},
   publisher={Oxford University Press},
@@ -365,7 +364,7 @@
   author = {Daskalaki, Evangelia},
   editor = {Friedman, Lauren A.},
   year = {2011},
-  pages = {77-86}
+  pages = {77--86}
 }
 
 @book{bobaljik2012,
@@ -378,13 +377,12 @@
 }
 
 @article{bergsma2019,
-  title={Mismatches in free relatives --- grafting nanosyntactic trees},
+  title={Mismatches in free relatives -- grafting nanosyntactic trees},
   author={Bergsma, Fenna},
   journal={Glossa: a journal of general linguistics},
   volume={4},
   number={1},
   year={2019},
-  publisher={Ubiquity Press},
   doi={10.5334/gjgl.821}
 }
 
@@ -462,7 +460,7 @@
   publisher={Dümmler}
 }
 
-@book{cinqueforthcoming,
+@book{cinque2020,
   location = {Cambridge},
   title = {The Syntax of Relative Clauses: A Unified Double-headed Analysis},
   publisher = {Cambridge University Press},
@@ -580,7 +578,7 @@
   number={1-3},
   pages={197--211},
   year={2015},
-  publisher={Brepols Turnhout}
+  doi={10.1484/j.food.5.111860}
 }
 
 @article{grosu1987,
@@ -591,19 +589,19 @@
   number={1},
   pages={41--58},
   year={1987},
-  publisher={Walter de Gruyter, Berlin/New York}
+  doi={10.1515/tlir.1987.6.1.41}
 }
 
-@inproceedings{citko2013,
+@book{citko2013,
   title={Size matters: Multidominance and DP structure in Polish},
   author={Citko, Barbara},
-  booktitle={Talk at the th Poznan Linguistic Meeting},
+  publisher={Talk at the th Poznan Linguistic Meeting},
   year={2013}
 }
 
 @book{vries1993,
   title={Forms and functions in Kombai, an Awyu language of Irian Jaya},
-  author={Vries, Lourens de},
+  author={De Vries, Lourens},
   year={1993},
   publisher={Dept. of Linguistics, Research School of Pacific Studies, The Australian National University}
 }
@@ -615,7 +613,6 @@
   volume={1},
   number={1},
   year={2016},
-  publisher={Ubiquity Press},
   doi={10.5334/gjgl.174}
 }
 
@@ -627,13 +624,15 @@
   number={1},
   pages={95--126},
   year={2004},
-  publisher={Springer}
+  doi={10.1023/b:nala.0000005564.33961.e0}
 }
 
 @article{schwarz2009,
   title={Two types of definites in natural language},
   author={Schwarz, Florian},
-  year={2009}
+  year={2009},
+  address={Amherst},
+  school={University of Massachusetts}
 }
 
 @article{spyropoulos2011,
@@ -641,23 +640,29 @@
   author={Spyropoulos, Vassilios},
   journal={Morphology and Its Interfaces},
   volume={178},
-  pages={21},
+  pages={21--56},
   year={2011},
-  publisher={John Benjamins Publishing}
+  doi={10.1075/la.178.05spy}
 }
 
 @book{braune2018,
   title={Althochdeutsche Grammatik I},
   author={Braune, Wilhelm},
   year={2018},
-  publisher={Walter de Gruyter GmbH \& Co KG},
-  doi={10.1515/9783110515114}
+  publisher={Walter de Gruyter},
+  doi={10.1515/9783110515114},
+  locaation={Boston}
 }
 
 @article{fuss2014,
   title={Freie Relativsätze mit d-Pronomen},
   author={Fuß, Eric and Grewendorf, Günther},
-  year={2014}
+  journal={Zeitschrift für Sprachwissenschaft},
+  year={2014},
+  volume={33},
+  number={2},
+  pages={165--214},
+  doi={10.1515/zfs-2014-0007}
 }
 
 @article{hanink2018,
@@ -668,12 +673,14 @@
   number={2},
   pages={247--290},
   year={2018},
-  publisher={Springer}
+  doi={10.1007/s10828-018-9096-6}
 }
 
 @article{fuss2017,
   title={Wh-relatives in German: historical and current developments},
-  author={Fuß, Eric}
+  year={2017},
+  author={Fuß, Eric},
+  journal={Handout, Cambridge}
 }
 
 @article{harley2002,
@@ -681,14 +688,19 @@
   author={Harley, Heidi and Ritter, Elizabeth},
   journal={Language},
   pages={482--526},
+  volume={78},
+  issue={3},
   year={2002},
+  doi={10.1353/lan.2002.0158}
 }
 
 @book{grosu1994,
   title={Three studies in locality and case},
   author={Grosu, Alexander},
   year={2003},
-  publisher={Routledge}
+  publisher={Routledge},
+  location={London/New York},
+  doi={10.4324/9780203427132}
 }
 
 @article{s̆imík2020,
@@ -697,14 +709,17 @@
   journal={The Wiley Blackwell Companion to Semantics},
   pages={1--38},
   year={2020},
-  publisher={Wiley Online Library}
+  doi={10.1002/9781118788516.sem093}
 }
 
-@book{durrell2011,
+@book{durrell2016,
   title={Hammer's German grammar and usage},
   author={Durrell, Martin},
-  year={2011},
-  publisher={Routledge}
+  location={London/New York},
+  year={2016},
+  publisher={Routledge},
+  doi={10.4324/9781315722634},
+  edition={6th}
 }
 
 @incollection{cinqueforthcoming,
@@ -712,10 +727,10 @@
   author = {Cinque, Guglielmo},
   year={forthcoming},
   publisher={Oxford University Press},
+  address = {Oxford},
   editor={Ángel J. Gallego and Dennis Ott},
-  booktitle={}
+  booktitle={Cartography and Explanatory Adequacy}
 }
-
 
 @article{lander2018,
   title={The nanosyntax of spatial deixis},
@@ -725,7 +740,6 @@
   number={2},
   pages={362--427},
   year={2018},
-  publisher={Wiley Online Library},
   doi={10.1111/stul.12061}
 }
 
@@ -738,66 +752,75 @@
 }
 
 @article{rooth1992,
-  title = {A {{Theory}} of {{Focus Interpretation}}},
+  title = {A Theory of Focus Interpretation},
   volume = {1},
   number = {1},
   journal = {Natural Language Semantics},
   author = {Rooth, Mats},
   year = {1992},
-  pages = {76-116},
+  pages = {76--116},
   doi = {10.1007/bf02342617}
 }
 
 @phdthesis{rooth1985,
   address = {Amherst},
-  type = {{{PhD Thesis}}},
-  title = {Association with {{Focus}}},
+  title = {Association with Focus},
   school = {University of Massachusets},
   author = {Rooth, Mats},
   year = {1985}
 }
 
-@article{colasanti2019,
+@inproceedings{colasanti2019,
   title={Spatial and discourse deixis and the speech act structure of nominals},
   author={Colasanti, Valentina and Wiltschko, Martina},
+  booktitle = {Proceedings of the Canadian Association Annual Meeting (CLA)},
   year={2019}
 }
 
 @book{baker2003,
   title={Lexical categories: Verbs, nouns and adjectives},
   author={Baker, Mark Cleland},
-  volume={102},
+  doi={10.1017/cbo9780511615047},
   year={2003},
-  publisher={Cambridge University Press}
+  publisher={Cambridge University Press},
+  location={Cambridge}
 }
 
 @incollection{cardinaletti1994,
-  address = {Venice},
-  title = {The {{Typology}} of {{Structural Deficiency}}. {{On}} the {{Three Grammatical Classes}}},
-  booktitle = {Working {{Papers}} in {{Linguistics}}},
-  publisher = {{University of Venice}},
+  title = {The Typology of Structural Deficiency. On the Three Grammatical Classes},
+  booktitle = {Working Papers in Linguistics},
+  publisher = {University of Venice},
   author = {Cardinaletti, Anna and Starke, Michal},
   year = {1994},
-  pages = {41-109}
+  pages = {41--109},
+  volume = {4},
+  number = {2}
 }
 
 @book{swan2002,
   title={A grammar of contemporary Polish},
   author={Swan, Oscar E},
   year={2002},
-  publisher={Slavica, Bloomington, Indiana}
+  publisher={Slavica},
+  location={Bloomington, IN}
 }
 
 @article{simik2016,
   title={On the semantics of Czech free relatives},
   author={Šimík, Radek},
-  year={2016}
+  year={2016},
+  volume={64},
+  number={1},
+  pages={109--129},
+  journal={Linguistica Brunensia}
 }
 
-@article{caha2020a,
-  title={Modeling declensions without declension features},
+@article{caha2021,
+  title={Modeling declensions without declension features. The case of Russian},
   author={Caha, Pavel},
-  year={2020}
+  year={2020},
+  doi={10.1556/2062.2021.00433},
+  journal={Acta Linguistica Academica}
 }
 
 @article{de2018,
@@ -807,8 +830,7 @@
   volume={19},
   number={3},
   pages={341--363},
-  year={2018},
-  publisher={Sveuciliste Josipa Jurja Strossmayera u Osijeku}
+  year={2018}
 }
 
 @article{caha2019,
@@ -818,8 +840,7 @@
   volume={73},
   number={3},
   pages={470--521},
-  year={2019},
-  publisher={Wiley Online Library}
+  year={2019}
 }
 
 @article{franks2004,
@@ -827,10 +848,8 @@
   author={Franks, Steven and Junghanns, Uwe and Law, Paul},
   journal={Journal of Slavic linguistics},
   volume={12},
-  number={1/2},
   pages={3--36},
-  year={2004},
-  publisher={JSTOR}
+  year={2004}
 }
 
 @article{picallo2008,
@@ -840,8 +859,7 @@
   volume={7},
   number={1},
   pages={47--66},
-  year={2008},
-  publisher={Societ{\`a} editrice il Mulino}
+  year={2008}
 }
 
 @article{kramer2016,
@@ -852,15 +870,16 @@
   number={11},
   pages={661--677},
   year={2016},
-  publisher={Wiley Online Library}
+  doi={10.1111/lnc3.12226}
 }
+
 @article{bittner1996,
   title={The structural determination of case and agreement},
   author={Bittner, Maria and Hale, Ken},
   journal={Linguistic inquiry},
   pages={1--68},
   year={1996},
-  publisher={JSTOR}
+  volume={27}
 }
 
 @article{baunaz2018,
@@ -871,23 +890,26 @@
   number={1},
   pages={1--27},
   year={2018},
-  publisher={Glossator}
+  doi={10.5334/gjgl.349}
 }
 
 @book{kayne1994,
   title={The antisymmetry of syntax},
   author={Kayne, Richard S},
-  volume={25},
   year={1994},
-  publisher={MIT press}
+  publisher={MIT press},
+  location={Cambridge/London}
 }
 
-@article{hartmann1978,
+@incollection{hartmann1978,
   title={Verschmelzungen als Varianten des bestimmten Artikels},
   author={Hartmann, Dietrich},
-  journal={Sprache in Gegenwart und Geschichte. Festschrift F{\"u}r Heinrich Matthias Heinrichs., B{\"o}hlau, K{\"o}ln},
+  booktitle={Sprache in Gegenwart und Geschichte. Festschrift für Heinrich Matthias Heinrichs},
   pages={68--81},
-  year={1978}
+  year={1978},
+  editor={Hartmann, Dietrich and Linke, Hansjürgen and Ludwig, Otto},
+  publisher = {Böhlau},
+  address={Köln}
 }
 
 @article{emonds1979,
@@ -896,13 +918,13 @@
   journal={Linguistic Inquiry},
   pages={211--243},
   year={1979},
-  publisher={JSTOR}
+  volume={10}
 }
 
-@article{carlson1977,
-  title={Remarks on the syntax of Free Relative Clauses},
+@book{carlson1977,
+  title={Remarks on the syntax of Free Relative Clauses [Unpublished manuscript]},
   author={Carlson, Lauri},
-  journal={Manuscript, Cambridge: MIT},
+  address={Linguistics and philosophy department, MIT},
   year={1977}
 }
 
@@ -910,12 +932,78 @@
   title={Finnish: An essential grammar},
   author={Karlsson, Fred},
   year={2013},
-  publisher={Routledge}
+  publisher={Routledge},
+  location={London/New York},
+  doi={10.4324/9780203008713}
 }
 
 @article{starke2017,
-  title={Resolving (DAT= ACC)$\ne$ GEN},
+  title={Resolving (DAT = ACC) ≠ GEN},
   author={Starke, Michal},
   year={2017},
-  publisher={Ubiquity Press}
+  doi={10.5334/gjgl.408},
+  journal={Glossa: a journal of general linguistics},
+  volume={2},
+  number={1}
+}
+
+@inproceedings{ingria1990,
+  title = {The Limits of Unification},
+  doi = {10.3115/981823.981848},
+  booktitle = {Proceedings of the 28th {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}}},
+  author = {Ingria, Robert},
+  year = {1990},
+  pages = {194--204}
+}
+
+@inproceedings{zaenen1984,
+  address = {Somerville, Massachusetts},
+  title = {Morphological Non-Distinctiveness and Coordination},
+  booktitle = {Proceedings of the {{First Eastern States Conference}} on {{Linguistics}}},
+  publisher = {{Cascadilla Press}},
+  author = {Zaenen, Annie and Karttunen, Lauri},
+  editor = {Alvarez, Gloria and Brodie, Belinda and McCoy, Terry},
+  year = {1984},
+  pages = {309--320}
+}
+
+@article{dyta1984,
+  title = {Across-the-Board Dependencies and Case in {{Polish}}},
+  volume = {15},
+  number = {4},
+  journal = {Linguistic inquiry},
+  author = {Dyta, Stefan},
+  year = {1984},
+  pages = {701--705}
+}
+
+@article{pullum1986,
+  title = {Phonological Resolution of Syntactic Feature Conflict},
+  volume = {62},
+  doi = {10.2307/415171},
+  journal = {Language},
+  author = {Pullum, Geoffrey and Zwicky, Arnold},
+  year = {1986},
+  pages = {751--773}
+}
+
+@article{dalrymple2000,
+  title = {Feature Indeterminacy and Feature Resolution},
+  volume = {76},
+  doi = {10.2307/417199},
+  number = {4},
+  journal = {Language},
+  author = {Dalrymple, Mary and Kaplan, Ronald M.},
+  year = {2000},
+  pages = {759--798}
+}
+
+@inproceedings{sag2003,
+  address = {Stanford},
+  title = {Coordination and Underspecification},
+  booktitle = {Proceedings of the 9th {{HPSG}} Conference},
+  publisher = {{Stanford University}},
+  author = {Sag, Ivan A},
+  year = {2003},
+  pages = {267--291}
 }
