--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -845,7 +845,7 @@ However, the features form a different syntactic structure, in such a way that t
 
 In sum, structural containment is a stronger requirement than feature containment. Only this stronger requirement is able to distinguish the internal-only type of language from the matching type of language. Therefore, this account crucially relies on structural containment being the containment requirement that needs to be fulfilled.
 
-Structural containment is not an ad hoc requirement for deletion of a light head or relative pronoun. It is also what seems to be crucial in NP ellipsis in general. \citet{cinqueforthcoming} argues that nominal modifiers can only be absent if they form a constituent with the NP. If they do not, they can not be deleted while still being interpreted, meaning that ellipsis is ungrammatical. In what follows, I present his argument.
+Structural containment is not an ad hoc requirement for deletion of a light head or relative pronoun. It is also what seems to be crucial in NP ellipsis in general. \citet{cinqueforthcoming} argues that nominal modifiers can only be absent if they form a constituent with the NP. If they do not, they cannot be deleted while still being interpreted, meaning that ellipsis is ungrammatical. In what follows, I present his argument.
 
 In \ref{ex:dutch-houses}, I give an example of a conjunction with two noun phrases from Dutch. The first conjunct consists of a demonstrative, an adjective and a noun, and the second one of only a demonstrative.
 
@@ -1105,13 +1105,13 @@ The relative pronoun is spelled out by two lexical entries, indicated by the cir
 
 Because the internal syntax of the light head and the relative pronoun is the same as in the internal-only type of language, the outcomes of the comparison between them in different cases are also the same as in the internal-only type of language. This means that when the internal case and the external case match or when the internal case is more complex than the external case, the light head is structurally contained in the relative pronoun, and the light head is deleted, as shown in Figure \ref{fig:nom-nom-intonly} and Figure \ref{fig:nom-acc-intonly}. This is the pattern that is observed in the unrestricted type of language.
 
-Crucially, the unrestricted type of language differs from the internal-only type of language when the external case is more complex than the internal case. The structures given in Figure \ref{fig:rel-lh-unres-1} cannot lead to a grammatical headless relative, shown in Figure \ref{fig:acc-nom-intonly}. Before I resort to introducing the second possible light head, I investigate whether it is possible to let a more complex external case surface while still keeping the light head but changing something else: a different kind of containment.
+Crucially, the unrestricted type of language differs from the internal-only type of language when the external case is more complex than the internal case. The structures given in Figure \ref{fig:rel-lh-unres-1} cannot lead to a grammatical headless relative, which I have shown in Figure \ref{fig:acc-nom-intonly}. Before I resort to introducing the second possible light head, I investigate whether it is possible to let a more complex external case surface while still keeping the light head but changing something else: a different kind of containment.
 
 I zoom in on the situation in which the external case is more complex.
-At first sight, it is unexpected that the light head bearing the external case surfaces to begin with. Recall that the feature content of light head is that of the relative pronoun minus the feature \tsc{rel}.
-So far, I proposed that the light head can be deleted when all of its features are structurally contained in the relative pronoun. This is impossible the other way around: all features of the relative pronoun can never be structurally contained in the light head, because the relative pronoun contains the feature \tsc{rel} that the light head does not. It seems that there is one case that defies this rule: syncretism.
+At first sight, it is unexpected that the light head bearing the external case surfaces to begin with. Recall that the feature content of the light head is that of the relative pronoun minus the feature \tsc{rel}.
+So far, I proposed that the light head can be deleted when all of its features are structurally contained in the relative pronoun. This is impossible the other way around: all features of the relative pronoun can never be structurally contained in the light head, because the relative pronoun contains the feature \tsc{rel} that the light head does not. It seems that there is one case that (crosslinguistically) defies this rule: syncretism \citep[cf.]{groos1981,dyta1984,zaenen1984,pullum1986,ingria1990,dalrymple2000,sag2003}.
 In what follows I show a situation similar to the missing \tsc{rel} feature: a syncretism between nominative and accusative case in Modern German.
-The phenomenon can be understood if we assume that there is a second type of containment: formal containment.
+The phenomenon can be understood if we assume that there is a third type of containment: formal containment.
 
 Consider the example in \ref{ex:mg-syn}, in which the internal nominative case competes against the external accusative case. The relative clause is marked in bold.
 The internal case is nominative, as the predicate \tit{gefällen} `to please' takes nominative subjects.
@@ -1124,7 +1124,7 @@ The relative pronoun \tit{was} `\ac{rp}.\ac{inan}.\tsc{nom/acc}' is syncretic be
 
 Remember from Chapter \ref{ch:typology} that Modern German is an internal-only type of language. This means that it allows the internal case to surface when it wins the case competition, but it does not allow the external case to do so. Solely looking at the cases in the example, it is expected that the example is ungrammatical: the internal nominative case cannot win over the external accusative case, and the external case is not allowed to surface. However, the example in \ref{ex:mg-syn} is grammatical, because there is a syncretism between the nominative and the accusative in the inanimate gender.
 
-This leads me to distinguish a second type of containment: formal containment. This type of containment holds when an element is formally (i.e. with its phonological form) contained in the other element.
+This leads me to distinguish a third type of containment: formal containment. This type of containment holds when an element is formally (i.e. with its phonological form) contained in the other element.
 Technically, it works as follows. The fact that there is a syncretism between the nominative and the accusative means that there is a lexical entry for the \tsc{acc}P which contains the feature \tsc{f}2 and the \tsc{nom}P, but not a more specific one that spells out only the \tsc{nom}P. In \ref{ex:nom-acc-syn}, I give such a lexical entry, which spells out as \tit{s}.
 
 \ex.\label{ex:nom-acc-syn}
@@ -1652,8 +1652,8 @@ In the second situation, the relative pronoun is at no point in the derivation f
 In summing up this chapter, I return to the metaphor with the committee that I introduced in Chapter \ref{ch:typology}. I wrote that first case competition takes place, in which a more complex case wins over a less complex case. This case competition can now be reformulated into a more general mechanism, namely containment. A more complex case contains a less complex case.
 
 Subsequently, I noted that there is a committee that can either approve the winning case or not approve it. In Chapter \ref{ch:typology} I wrote that the approval happens based on where the winning case comes from: from inside of the relative clause (internal) or from outside of the relative clause (external). I argued in this chapter that headless relatives are derived from light-headed relatives. The light head bears that external case and the relative pronoun bears the internal case. The `approval' of an internal or external case relies on the same mechanism as case competition, namely containment.
-If the light head is (structurally) contained in the relative pronoun, the light head can be deleted. Then the light head with its external case is deleted, and the relative pronoun with its internal case surfaces. This is what corresponds to the the internal case `being allowed to surface'.
-If the relative pronoun is (formally) contained in the light head, the relative pronoun can be deleted. Then the relative pronoun with its internal case is deleted, and the light head with its external case surfaces. This is what corresponds to the the external case `being allowed to surface'.
+If the light head is (structurally) contained in the relative pronoun, the light head can be deleted. Then the light head with its external case is deleted, and the relative pronoun with its internal case surfaces. This is what corresponds to the internal case `being allowed to surface'.
+If the relative pronoun is (formally) contained in the light head, the relative pronoun can be deleted. Then the relative pronoun with its internal case is deleted, and the light head with its external case surfaces. This is what corresponds to the external case `being allowed to surface'.
 
 In other words, the grammaticality of a headless relative depends on containment. What is being compared is the internal syntax of the light head and the relative pronoun, which both bear their own case. Case is special in that it can differ from sentence to sentence within a language. Therefore, the grammaticality of a sentence can differ within a language depending on the internal and external case. The part of the light head and relative pronoun that does not involve case features is stable within a language. Therefore, whether the internal or external case is `allowed to surface' does not differ within a language.
 
@@ -1758,7 +1758,7 @@ However, consider Figure \ref{fig:rel-lh-unres-mono-rep} again.
 Although the light head cannot be deleted by formal containment, it can be deleted by structural containment. The light head is namely still formally contained in the relative pronoun.\footnote{This reasoning holds for monomorphemic light heads and relative pronouns.}
 
 In this dissertation I describe different language types in case competition in headless relatives. In my account, the different language types are a result of a comparison of the light head and the relative pronoun in the language.
-The larger syntactic context in which this takes place should be kept stable across languages. The operation that deletes the light head or the relative pronoun is the same for all language types. Therefore, the larger syntactic structure and the deletion operator do not play a central role in the account. At the end of Chapter \ref{ch:deriving-unrestricted}, the larger syntactic structure of headless relatives enters the discussion when I account for how an external case can win the case competition. There I show where in the larger syntax the (different) light heads are situated and that deletion takes place under c-command.
+The larger syntactic context in which this takes place should be kept stable across languages. The operation that deletes the light head or the relative pronoun is the same for all language types. Therefore, the larger syntactic structure and the deletion operation do not play a central role in the account. At the end of Chapter \ref{ch:deriving-unrestricted}, the larger syntactic structure of headless relatives enters the discussion when I account for how an external case can win the case competition. There I show where in the larger syntax the (different) light heads are situated and that deletion takes place under c-command.
 
 To conclude, in this chapter I introduced the assumptions that headless relatives are derived from light-headed relatives and that relative pronouns contain at least one more feature than light heads. A headless relative is grammatical when either the light head or the relative pronoun is structurally or formally contained in the other element. This set of assumptions derives that only the most complex case can surface and that there is no language of the external-only type.
 
